--- a/styles/index.css
+++ b/styles/index.css
@@ -27,7 +27,7 @@
     h4,
     h5,
     h6 {
-        font-family: 'Playfair Display', serif;
+        font-family: serif;
         color: #282e3f;
     }
 
